syntax = "proto3";

package pb;

option go_package = "github.com/heritechie/go-book-catalog/book-repo-svc/pkg/pb";

message DeleteBookRequest {
    string book_id = 1;
}

message DeleteBookResponse {
    string message = 1;
}
